...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copy" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6kq-tz-DbD">
                                        <rect key="frame" x="75.416666666666671" y="182" width="29.666666666666657" height="14.666666666666657"/>
                                        <fontDescription key="fontDescription" name="Figtree-Bold" family="Figtree" pointSize="12"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Settings" id="dYy-hB-0Gb"/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                    <connections>
...
        <scene sceneID="IZw-fR-KeK">
            <objects>
                <viewController storyboardIdentifier="show_qr" id="3dX-B7-5wO" customClass="ShowQRViewController" customModule="Kukai_Mobile" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="62t-oA-rcZ">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Receive Address" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GKP-JB-95F">
                                <rect key="frame" x="16" y="150" width="361" height="24"/>
                                <fontDescription key="fontDescription" name="Figtree-Bold" family="Figtree" pointSize="20"/>
...
        <scene sceneID="dCZ-NS-eAT">
            <objects>
                <viewController storyboardIdentifier="currency" title="Currency" id="8I7-vb-gkS" customClass="CurrencyViewController" customModule="Kukai_Mobile" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="rJX-jP-xGD">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Storage" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yUC-wi-ylz">
                                <rect key="frame" x="16" y="150" width="361" height="24"/>
                                <fontDescription key="fontDescription" name="Figtree-Bold" family="Figtree" pointSize="20"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Activity Domains and Aliases" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LOt-OF-gyD">
                                <rect key="frame" x="16" y="150" width="361" height="24"/>
                                <fontDescription key="fontDescription" name="Figtree-Bold" family="Figtree" pointSize="20"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Security" id="bcT-4q-5Si"/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                    <connections>
...
