...
		
		// Build snapshot
		var snapshot = NSDiffableDataSourceSnapshot<Int, AnyHashable>()
		snapshot.appendSections([0])
		
		snapshot.appendItems([TitleSubtitleObj(title: "Selected Currency", subtitle: selectedCurrency)], toSection: 0)
		snapshot.appendItems([TitleSubtitleObj(title: "Theme", subtitle: selectedTheme)], toSection: 0)
		snapshot.appendItems([TitleSubtitleObj(title: "Network", subtitle: selectedNetwork)], toSection: 0)
		snapshot.appendItems([TitleSubtitleObj(title: "Beacon", subtitle: "")], toSection: 0)
		snapshot.appendItems([TitleSubtitleObj(title: "Wallet Connect", subtitle: "")], toSection: 0)
		snapshot.appendItems([TitleSubtitleObj(title: "Debugging", subtitle: "")], toSection: 0)
		
		ds.apply(snapshot, animatingDifferences: animate)
		
...
