...
			} else {
				options.append([.init(SideMenuOptionToggleData(icon: image ?? UIImage.unknownToken(), title: title, toggleOn: StorageService.isBiometricEnabled(), id: "biometric"))])
			}
		}
		
		options.append(contentsOf: [
			[.init(SideMenuOptionData(icon: UIImage(named: "Kukai") ?? UIImage.unknownToken(), title: "Kukai Passcode", subtitle: nil, subtitleIsWarning: false, id: "passcode"))],
			[.init(SideMenuOptionData(icon: UIImage(named: "Wallet") ?? UIImage.unknownToken(), title: "Back Up", subtitle: nil, subtitleIsWarning: false, id: "backup"))],
			[.init(SideMenuOptionData(icon: UIImage(named: "Reset") ?? UIImage.unknownToken(), title: "Reset App", subtitle: nil, subtitleIsWarning: false, id: "reset"))]
		])
		
		snapshot.appendSections(Array(0..<options.count))
		
		for (index, opt) in options.enumerated() {
			snapshot.appendItems(opt, toSection: index)
...
