...
		super.viewDidAppear(animated)
		self.showLoadingModal(completion: nil)
		
		LedgerService.shared.getAddress(verify: false)
			.onReceiveOutput { [weak self] addressObj in
				self?.hideLoadingModal(completion: nil)
				self?.addressHeadingLabel.text = "Address:"
				self?.addressLabel.text = addressObj.address
			}
			.flatMap { _ in
				return LedgerService.shared.getAddress(verify: true)
			}
			.sink(onError: { [weak self] error in
...
