...
	public static let customAspectRatio: CGFloat = 2.62
	
	override func awakeFromNib() {
		super.awakeFromNib()
		
		collectionView.accessibilityIdentifier = "discover-featured-cell"
		pageControl.accessibilityIdentifier = "discover-featured-page-control"
		
		collectionView.dataSource = self
		collectionView.delegate = self
		
		let flowLayout = (self.collectionView.collectionViewLayout as? UICollectionViewFlowLayout)
		flowLayout?.minimumLineSpacing = 0
...
